# Prompt-Vault

./: PromptVault_PRD_TRD.md  features.md  package-lock.json  package.json  prompt.md  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  keychain.rs  lib.rs  main.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/ai/: mod.rs
src-tauri/src/commands/: ai.rs  cli.rs  collections.rs  export.rs  mod.rs  prompts.rs  settings.rs  tags.rs  types.rs
src/components/: ABTestPanel.tsx  ConversationPanel.tsx  MarkdownRenderer.tsx  SettingsModal.tsx  Sidebar.tsx
src/components/ui/: button.tsx  select.tsx
src/lib/: tauri.ts  utils.ts
src/store/: index.ts
