[package]
name = "promptvault"
version = "0.1.0"
description = "A local-first prompt manager - Your prompts. Your machine. Your keys. Zero middlemen."
authors = ["PromptVault Team"]
edition = "2021"
license = "MIT"

[lib]
name = "promptvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
keyring = "3"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
once_cell = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
